[gd_scene load_steps=2 format=3 uid="uid://cb0x38fi6a75c"]

[ext_resource type="Script" uid="uid://b40wvld7onf1x" path="res://Environment/Root/player_hud.gd" id="1_3vyh1"]

[node name="Player_HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3vyh1")

[node name="FPS" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -151.0
offset_top = 14.0
offset_right = -33.0
offset_bottom = 72.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 32

[node name="crosshair" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -22.5
offset_right = 0.5
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 32
text = "x"

[node name="PromptLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = 112.5
offset_right = 0.5
offset_bottom = 157.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 32

[node name="Cast" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -83.0
offset_top = -109.0
offset_right = 87.0
offset_bottom = -63.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 32

[node name="Reload" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -85.0
offset_top = -46.0
offset_right = 85.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 32

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 85.0
offset_top = -158.0
offset_right = 327.0
offset_bottom = -60.0
grow_vertical = 0

[node name="Wand1" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Wand 1"

[node name="Wand2" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Empty"

[node name="Wand3" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Empty"

[node name="Wand4" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Empty"
